// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bus reimbursement 1`] = `
<div
  class="transportation"
  style="display:flex;flex-direction:column;align-items:center"
>
  <div
    style="background-color:#686e77;width:100%;max-width:750px;margin:60px;padding:40px 20px;color:white;text-align:center"
  >
    <h4>
      You have been placed on a bus!
    </h4>
    <p
      style="max-width:575px;margin:20px auto 0"
    >
      We are running free buses from locations in California, and we would like you to offer a spot on one :) Buses leave on Friday morning and return Sunday night. If you would like a spot on the bus listed below, you must RSVP on this page by 
      <strong>
        November 27, 2048 8:39 PM PST
      </strong>
      . The bus will be first come, first served, but this shows us approximately how many seats we need. If you do not fill out this form, you will 
      <u>
        <strong>
          not
        </strong>
      </u>
       be allowed to board the bus. Because you are near a bus, we do not anticipate offering you other travel reimbursement options.
    </p>
    <p
      style="max-width:575px;margin:20px auto 0"
    >
      You 
      <u>
        <strong>
          must
        </strong>
      </u>
       have a 
      <u>
        <strong>
          government-issued ID
        </strong>
      </u>
       to get on the bus (this is because you must have one to check-in at TreeHacks!). Your bus coordinators will be checking IDs, and they will not be able to save a spot for you if you forget your ID. Because the bus is first come, first served, we recommend getting to your pickup spot early during the check in process. Buses depart 30 minutes after check-in begins or until spots are filled, whichever is first. Times on this page are tentative until February 1st.
    </p>
    <div
      style="margin:40px;padding:20px;background-color:#535152"
    >
      <p>
        <small>
          We will add information for your bus coordinator in the weeks leading up to the event. If you have questions in the meantime, please reach out to hello@treehacks.com.
        </small>
      </p>
      <div
        class="route"
      >
        <div
          class="entry"
        >
          <div
            class="left"
          >
            <div
              class="time"
            >
              8:00am
            </div>
            <div
              class="day"
            >
              Friday, February 15th
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="stop"
            >
              Check in at 37th & McClintock
            </div>
            <div
              class="location"
            >
              Atlanta
            </div>
          </div>
        </div>
        <div
          class="entry"
        >
          <div
            class="left"
          >
            <div
              class="time"
            />
            <div
              class="day"
            />
          </div>
          <div
            class="right"
          >
            <div
              class="stop"
            >
              Hack, hack, hack!
            </div>
            <div
              class="location"
            />
          </div>
        </div>
        <div
          class="entry"
        >
          <div
            class="left"
          >
            <div
              class="time"
            >
              11:00pm
            </div>
            <div
              class="day"
            >
              Sunday, February 17th
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="stop"
            >
              37th & McClintock
            </div>
            <div
              class="location"
            >
              Los Angeles
            </div>
          </div>
        </div>
      </div>
    </div>
    <h5>
      <span>
        You must RSVP by 
        <strong>
          November 27, 2048 8:39 PM PST
        </strong>
      </span>
    </h5>
    <div
      class="btn-container"
      style="margin-bottom:0"
    >
      <div>
        <input
          class="btn btn-custom inverted"
          disabled=""
          style="opacity:0.5;pointer-events:none"
          type="submit"
          value="cancel RSVP"
        />
        <input
          class="btn btn-custom"
          type="submit"
          value="RSVP"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`bus reimbursement with accept=true 1`] = `
<div
  class="transportation"
  style="display:flex;flex-direction:column;align-items:center"
>
  <div
    style="background-color:#686e77;width:100%;max-width:750px;margin:60px;padding:40px 20px;color:white;text-align:center"
  >
    <h4>
      You have been placed on a bus!
    </h4>
    <p
      style="max-width:575px;margin:20px auto 0"
    >
      We are running free buses from locations in California, and we would like you to offer a spot on one :) Buses leave on Friday morning and return Sunday night. If you would like a spot on the bus listed below, you must RSVP on this page by 
      <strong>
        November 27, 2048 8:39 PM PST
      </strong>
      . The bus will be first come, first served, but this shows us approximately how many seats we need. If you do not fill out this form, you will 
      <u>
        <strong>
          not
        </strong>
      </u>
       be allowed to board the bus. Because you are near a bus, we do not anticipate offering you other travel reimbursement options.
    </p>
    <p
      style="max-width:575px;margin:20px auto 0"
    >
      You 
      <u>
        <strong>
          must
        </strong>
      </u>
       have a 
      <u>
        <strong>
          government-issued ID
        </strong>
      </u>
       to get on the bus (this is because you must have one to check-in at TreeHacks!). Your bus coordinators will be checking IDs, and they will not be able to save a spot for you if you forget your ID. Because the bus is first come, first served, we recommend getting to your pickup spot early during the check in process. Buses depart 30 minutes after check-in begins or until spots are filled, whichever is first. Times on this page are tentative until February 1st.
    </p>
    <div
      style="margin:40px;padding:20px;background-color:#535152"
    >
      <p>
        <small>
          We will add information for your bus coordinator in the weeks leading up to the event. If you have questions in the meantime, please reach out to hello@treehacks.com.
        </small>
      </p>
      <div
        class="route"
      >
        <div
          class="entry"
        >
          <div
            class="left"
          >
            <div
              class="time"
            >
              8:00am
            </div>
            <div
              class="day"
            >
              Friday, February 15th
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="stop"
            >
              Check in at 37th & McClintock
            </div>
            <div
              class="location"
            >
              Atlanta
            </div>
          </div>
        </div>
        <div
          class="entry"
        >
          <div
            class="left"
          >
            <div
              class="time"
            />
            <div
              class="day"
            />
          </div>
          <div
            class="right"
          >
            <div
              class="stop"
            >
              Hack, hack, hack!
            </div>
            <div
              class="location"
            />
          </div>
        </div>
        <div
          class="entry"
        >
          <div
            class="left"
          >
            <div
              class="time"
            >
              11:00pm
            </div>
            <div
              class="day"
            >
              Sunday, February 17th
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="stop"
            >
              37th & McClintock
            </div>
            <div
              class="location"
            >
              Los Angeles
            </div>
          </div>
        </div>
      </div>
    </div>
    <h5>
      Thanks, we've received your RSVP
    </h5>
    <div
      class="btn-container"
      style="margin-bottom:0"
    >
      <div>
        <input
          class="btn btn-custom inverted"
          type="submit"
          value="cancel RSVP"
        />
        <input
          class="btn btn-custom"
          type="submit"
          value="RSVP"
        />
      </div>
    </div>
    <p>
      <small>
        We've received your RSVP! You can change your status anytime up to the event if your plans change.
      </small>
    </p>
  </div>
</div>
`;

exports[`bus reimbursement with deadline passed and RSVP'd no, should show TransportationExpired 1`] = `<Component />`;

exports[`bus reimbursement with deadline passed and RSVP'd yes, should show bus route 1`] = `
<div
  class="transportation"
  style="display:flex;flex-direction:column;align-items:center"
>
  <div
    style="background-color:#686e77;width:100%;max-width:750px;margin:60px;padding:40px 20px;color:white;text-align:center"
  >
    <h4>
      You have been placed on a bus!
    </h4>
    <p
      style="max-width:575px;margin:20px auto 0"
    >
      We are running free buses from locations in California, and we would like you to offer a spot on one :) Buses leave on Friday morning and return Sunday night. If you would like a spot on the bus listed below, you must RSVP on this page by 
      <strong>
        November 27, 2048 8:39 PM PST
      </strong>
      . The bus will be first come, first served, but this shows us approximately how many seats we need. If you do not fill out this form, you will 
      <u>
        <strong>
          not
        </strong>
      </u>
       be allowed to board the bus. Because you are near a bus, we do not anticipate offering you other travel reimbursement options.
    </p>
    <p
      style="max-width:575px;margin:20px auto 0"
    >
      You 
      <u>
        <strong>
          must
        </strong>
      </u>
       have a 
      <u>
        <strong>
          government-issued ID
        </strong>
      </u>
       to get on the bus (this is because you must have one to check-in at TreeHacks!). Your bus coordinators will be checking IDs, and they will not be able to save a spot for you if you forget your ID. Because the bus is first come, first served, we recommend getting to your pickup spot early during the check in process. Buses depart 30 minutes after check-in begins or until spots are filled, whichever is first. Times on this page are tentative until February 1st.
    </p>
    <div
      style="margin:40px;padding:20px;background-color:#535152"
    >
      <p>
        <small>
          We will add information for your bus coordinator in the weeks leading up to the event. If you have questions in the meantime, please reach out to hello@treehacks.com.
        </small>
      </p>
      <div
        class="route"
      >
        <div
          class="entry"
        >
          <div
            class="left"
          >
            <div
              class="time"
            >
              8:00am
            </div>
            <div
              class="day"
            >
              Friday, February 15th
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="stop"
            >
              Check in at 37th & McClintock
            </div>
            <div
              class="location"
            >
              Atlanta
            </div>
          </div>
        </div>
        <div
          class="entry"
        >
          <div
            class="left"
          >
            <div
              class="time"
            />
            <div
              class="day"
            />
          </div>
          <div
            class="right"
          >
            <div
              class="stop"
            >
              Hack, hack, hack!
            </div>
            <div
              class="location"
            />
          </div>
        </div>
        <div
          class="entry"
        >
          <div
            class="left"
          >
            <div
              class="time"
            >
              11:00pm
            </div>
            <div
              class="day"
            >
              Sunday, February 17th
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="stop"
            >
              37th & McClintock
            </div>
            <div
              class="location"
            >
              Los Angeles
            </div>
          </div>
        </div>
      </div>
    </div>
    <h5>
      Thanks, we've received your RSVP
    </h5>
    <div
      class="btn-container"
      style="margin-bottom:0"
    >
      <div>
        <input
          class="btn btn-custom inverted"
          type="submit"
          value="cancel RSVP"
        />
        <input
          class="btn btn-custom"
          type="submit"
          value="RSVP"
        />
      </div>
    </div>
    <p>
      <small>
        We've received your RSVP! You can change your status anytime up to the event if your plans change.
      </small>
    </p>
  </div>
</div>
`;

exports[`bus reimbursement with deadline passed and no RSVP, should show TransportationExpired 1`] = `<Component />`;

exports[`don't show reimbursement if status is unavailable, even if reimbursement is defined 1`] = `
<div
  style="display:flex;flex-direction:column;align-items:center"
>
  <div
    style="background-color:#686e77;width:100%;max-width:700px;margin-top:60px;padding:40px 20px;color:white;text-align:center"
  >
    <h4>
      You have not been given a travel reimbursement.
    </h4>
    <p
      style="max-width:500px;margin:20px auto 0"
    >
      It looks like you're coming from close by, so we aren't planning to coordinate travel for you. Let us know if we made a mistake!
    </p>
  </div>
</div>
`;

exports[`flight reimbursement 1`] = `
<div
  class="transportation"
  style="display:flex;flex-direction:column;align-items:center"
>
  <div
    style="background-color:#686e77;width:100%;max-width:750px;margin:60px;padding:40px 20px;color:white;text-align:center"
  >
    <div>
      <h4>
        You have received a flight reimbursement!
      </h4>
      <p
        style="max-width:575px;margin:20px auto"
      >
        We have calculated your flight cap based on the location in your application. We will reimburse the cost of your flight, up to this amount. 
        <strong>
          If you do not upload your receipts by the deadline, we will assume you are declining the reimbursement, and you will not be reimbursed.
        </strong>
      </p>
      <p
        style="max-width:575px;margin:20px auto"
      >
        Here are the guidelines you need to follow in order to receive a reimbursement:
      </p>
      <ul
        style="text-align:left;margin:20px auto;max-width:575px"
      >
        <li>
          Attend TreeHacks 2019 :)
        </li>
        <li>
          Submit a project by the project deadline the weekend-of.
        </li>
        <li>
          Submit your flight receipts by the deadline listed on this page. We will only be able to reimburse your reimbursement if they are submitted by then.
        </li>
        <li>
          Follow any and all TreeHacks rules & the MLH Code of Conduct.
        </li>
      </ul>
      <p
        style="max-width:575px;margin:20px auto"
      >
        We recommend flying into SJC, SFO, or OAK; these are the closest  airports to Stanford (in that order). Please arrange for transportation  to bring you to the venue from the airport on Friday afternoon. Plan for your flight to arrive Friday afternoon by 3pm. This will allow  for you to get to Stanford on time for dinner and other goodies we have  planned. On Sunday, expect to leave the venue around 4pm, after closing ceremony.
      </p>
      <p
        style="max-width:575px;margin:20px auto"
      >
        In the case that your current flight cap prevents you from attending TreeHacks or is significantly off the mark of flight prices that you're able to find, please reach out to us at hello@treehacks.com,  and we will work something out. Our hope is to remove any and all  barriers that could prevent you from coming out to TreeHacks!
      </p>
    </div>
    <h5
      style="margin-top:40px"
    >
      <span>
        Receipts must be uploaded by 
        <strong>
          November 27, 2048 8:39 PM PST
        </strong>
      </span>
    </h5>
    <h5>
      TreeHacks is reimbursing you up to 
      <span
        style="color:#00b65f;font-weight:bold"
      >
        $500.30
      </span>
    </h5>
    <div>
      <p
        style="max-width:575px;margin:20px auto -20px;font-style:italic"
      >
        If you have multiple receipts, please combine them into a single PDF prior to uploading. You can only submit this form once.
      </p>
      <form
        class="treehacks-form "
      >
        <div />
        <div
          class="btn-container"
          style="margin-bottom:0"
        >
          <div>
            <input
              class="btn btn-custom"
              type="submit"
              value="submit receipt"
            />
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`flight reimbursement with deadline passed 1`] = `<Component />`;

exports[`flight reimbursement with transportation_status=SUBMITTED 1`] = `
<div
  class="transportation"
  style="display:flex;flex-direction:column;align-items:center"
>
  <div
    style="background-color:#686e77;width:100%;max-width:750px;margin:60px;padding:40px 20px;color:white;text-align:center"
  >
    <div>
      <h4>
        You have received a flight reimbursement!
      </h4>
      <p
        style="max-width:575px;margin:20px auto"
      >
        We have calculated your flight cap based on the location in your application. We will reimburse the cost of your flight, up to this amount. 
        <strong>
          If you do not upload your receipts by the deadline, we will assume you are declining the reimbursement, and you will not be reimbursed.
        </strong>
      </p>
      <p
        style="max-width:575px;margin:20px auto"
      >
        Here are the guidelines you need to follow in order to receive a reimbursement:
      </p>
      <ul
        style="text-align:left;margin:20px auto;max-width:575px"
      >
        <li>
          Attend TreeHacks 2019 :)
        </li>
        <li>
          Submit a project by the project deadline the weekend-of.
        </li>
        <li>
          Submit your flight receipts by the deadline listed on this page. We will only be able to reimburse your reimbursement if they are submitted by then.
        </li>
        <li>
          Follow any and all TreeHacks rules & the MLH Code of Conduct.
        </li>
      </ul>
      <p
        style="max-width:575px;margin:20px auto"
      >
        We recommend flying into SJC, SFO, or OAK; these are the closest  airports to Stanford (in that order). Please arrange for transportation  to bring you to the venue from the airport on Friday afternoon. Plan for your flight to arrive Friday afternoon by 3pm. This will allow  for you to get to Stanford on time for dinner and other goodies we have  planned. On Sunday, expect to leave the venue around 4pm, after closing ceremony.
      </p>
      <p
        style="max-width:575px;margin:20px auto"
      >
        In the case that your current flight cap prevents you from attending TreeHacks or is significantly off the mark of flight prices that you're able to find, please reach out to us at hello@treehacks.com,  and we will work something out. Our hope is to remove any and all  barriers that could prevent you from coming out to TreeHacks!
      </p>
    </div>
    <h5
      style="margin-top:40px"
    >
      Thanks, we've received your receipt
    </h5>
    <h5>
      TreeHacks is reimbursing you up to 
      <span
        style="color:#00b65f;font-weight:bold"
      >
        $500.30
      </span>
    </h5>
    <p
      style="max-width:575px;margin:20px auto 0"
    >
      Thanks, we've received your reimbursement request.
    </p>
  </div>
</div>
`;

exports[`no reimbursement 1`] = `
<div
  style="display:flex;flex-direction:column;align-items:center"
>
  <div
    style="background-color:#686e77;width:100%;max-width:700px;margin-top:60px;padding:40px 20px;color:white;text-align:center"
  >
    <h4>
      You have not been given a travel reimbursement.
    </h4>
    <p
      style="max-width:500px;margin:20px auto 0"
    >
      It looks like you're coming from close by, so we aren't planning to coordinate travel for you. Let us know if we made a mistake!
    </p>
  </div>
</div>
`;

exports[`no reimbursement before submitting form 1`] = `
<div
  style="display:flex;flex-direction:column;align-items:center"
>
  <div
    style="background-color:#686e77;width:100%;max-width:500px;margin-top:60px;padding:20px;color:white;text-align:center"
  >
    <span>
      There are no travel options at this time. 
    </span>
    <span>
      Check back after you have received a decision about your application.
    </span>
  </div>
</div>
`;

exports[`other reimbursement 1`] = `
<div
  class="transportation"
  style="display:flex;flex-direction:column;align-items:center"
>
  <div
    style="background-color:#686e77;width:100%;max-width:750px;margin:60px;padding:40px 20px;color:white;text-align:center"
  >
    <div>
      <h4>
        You have received a travel reimbursement!
      </h4>
      <p
        style="max-width:575px;margin:20px auto"
      >
        We have calculated your reimbursement amount based on the location in your application. We will reimburse the cost of your travel, up to this amount. It is up to you to decide how you get to Stanford, whether that's driving, public transportation, or another method. You must upload your receipts by the deadline listed on this page, or we will not be able to process your reimbursement.
      </p>
      <p
        style="max-width:575px;margin:20px auto"
      >
        Here are the guidelines you need to follow in order to receive a reimbursement:
      </p>
      <ul
        style="text-align:left;margin:20px auto;max-width:575px"
      >
        <li>
          Attend TreeHacks 2019 :)
        </li>
        <li>
          Submit a project by the project deadline the weekend-of.
        </li>
        <li>
          Submit your receipts by the deadline listed on this page. We will only be able to reimburse your reimbursement if they are submitted by then.
        </li>
        <li>
          Follow any and all TreeHacks rules & the MLH Code of Conduct.
        </li>
      </ul>
    </div>
    <h5
      style="margin-top:40px"
    >
      <span>
        Receipts must be uploaded by 
        <strong>
          November 27, 2048 8:39 PM PST
        </strong>
      </span>
    </h5>
    <h5>
      TreeHacks is reimbursing you up to 
      <span
        style="color:#00b65f;font-weight:bold"
      >
        $500.30
      </span>
    </h5>
    <div>
      <p
        style="max-width:575px;margin:20px auto -20px;font-style:italic"
      >
        If you have multiple receipts, please combine them into a single PDF prior to uploading. You can only submit this form once.
      </p>
      <form
        class="treehacks-form "
      >
        <div />
        <div
          class="btn-container"
          style="margin-bottom:0"
        >
          <div>
            <input
              class="btn btn-custom"
              type="submit"
              value="submit receipt"
            />
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`other reimbursement with deadline passed 1`] = `<Component />`;

exports[`other reimbursement with transportation_status=SUBMITTED 1`] = `
<div
  class="transportation"
  style="display:flex;flex-direction:column;align-items:center"
>
  <div
    style="background-color:#686e77;width:100%;max-width:750px;margin:60px;padding:40px 20px;color:white;text-align:center"
  >
    <div>
      <h4>
        You have received a travel reimbursement!
      </h4>
      <p
        style="max-width:575px;margin:20px auto"
      >
        We have calculated your reimbursement amount based on the location in your application. We will reimburse the cost of your travel, up to this amount. It is up to you to decide how you get to Stanford, whether that's driving, public transportation, or another method. You must upload your receipts by the deadline listed on this page, or we will not be able to process your reimbursement.
      </p>
      <p
        style="max-width:575px;margin:20px auto"
      >
        Here are the guidelines you need to follow in order to receive a reimbursement:
      </p>
      <ul
        style="text-align:left;margin:20px auto;max-width:575px"
      >
        <li>
          Attend TreeHacks 2019 :)
        </li>
        <li>
          Submit a project by the project deadline the weekend-of.
        </li>
        <li>
          Submit your receipts by the deadline listed on this page. We will only be able to reimburse your reimbursement if they are submitted by then.
        </li>
        <li>
          Follow any and all TreeHacks rules & the MLH Code of Conduct.
        </li>
      </ul>
    </div>
    <h5
      style="margin-top:40px"
    >
      Thanks, we've received your receipt
    </h5>
    <h5>
      TreeHacks is reimbursing you up to 
      <span
        style="color:#00b65f;font-weight:bold"
      >
        $500.30
      </span>
    </h5>
    <p
      style="max-width:575px;margin:20px auto 0"
    >
      Thanks, we've received your reimbursement request.
    </p>
  </div>
</div>
`;

exports[`reimbursement screen when admission declined -- don't show reimbursement 1`] = `
<div
  style="display:flex;flex-direction:column;align-items:center"
>
  <div
    style="background-color:#686e77;width:100%;max-width:500px;margin-top:60px;padding:20px;color:white;text-align:center"
  >
    <span>
      There are no travel options at this time. 
    </span>
    <span>
      You have declined your admission, so no transportation options are available.
    </span>
  </div>
</div>
`;

exports[`reimbursement screen when admission not yet confirmed 1`] = `
<div
  class="transportation"
  style="display:flex;flex-direction:column;align-items:center"
>
  <div
    style="background-color:#686e77;width:100%;max-width:750px;margin:60px;padding:40px 20px;color:white;text-align:center"
  >
    <div>
      <h4>
        You have received a flight reimbursement!
      </h4>
      <p
        style="max-width:575px;margin:20px auto"
      >
        We have calculated your flight cap based on the location in your application. We will reimburse the cost of your flight, up to this amount. 
        <strong>
          If you do not upload your receipts by the deadline, we will assume you are declining the reimbursement, and you will not be reimbursed.
        </strong>
      </p>
      <p
        style="max-width:575px;margin:20px auto"
      >
        Here are the guidelines you need to follow in order to receive a reimbursement:
      </p>
      <ul
        style="text-align:left;margin:20px auto;max-width:575px"
      >
        <li>
          Attend TreeHacks 2019 :)
        </li>
        <li>
          Submit a project by the project deadline the weekend-of.
        </li>
        <li>
          Submit your flight receipts by the deadline listed on this page. We will only be able to reimburse your reimbursement if they are submitted by then.
        </li>
        <li>
          Follow any and all TreeHacks rules & the MLH Code of Conduct.
        </li>
      </ul>
      <p
        style="max-width:575px;margin:20px auto"
      >
        We recommend flying into SJC, SFO, or OAK; these are the closest  airports to Stanford (in that order). Please arrange for transportation  to bring you to the venue from the airport on Friday afternoon. Plan for your flight to arrive Friday afternoon by 3pm. This will allow  for you to get to Stanford on time for dinner and other goodies we have  planned. On Sunday, expect to leave the venue around 4pm, after closing ceremony.
      </p>
      <p
        style="max-width:575px;margin:20px auto"
      >
        In the case that your current flight cap prevents you from attending TreeHacks or is significantly off the mark of flight prices that you're able to find, please reach out to us at hello@treehacks.com,  and we will work something out. Our hope is to remove any and all  barriers that could prevent you from coming out to TreeHacks!
      </p>
    </div>
    <h5
      style="margin-top:40px"
    >
      <span>
        Receipts must be uploaded by 
        <strong>
          November 27, 2048 8:39 PM PST
        </strong>
      </span>
    </h5>
    <h5>
      TreeHacks is reimbursing you up to 
      <span
        style="color:#00b65f;font-weight:bold"
      >
        $500.30
      </span>
    </h5>
    <p
      style="max-width:575px;margin:20px auto 0"
    >
      After you confirm your spot using the dashboard, you can use this page to upload your receipts and request reimbursement.
    </p>
  </div>
</div>
`;
